fix h1 text align issues across multiple pages

--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,6 @@ button {
   color: #FDF1DE;
   cursor: pointer;
 }
+h1 {
+  text-align: center;
+}
